--- a/mini-cooper-s-na-prodej.html
+++ b/mini-cooper-s-na-prodej.html
@@ -5,22 +5,142 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Prodám MINI COOPER S R53 2006</title>
 
+        <link rel="stylesheet" type="text/css" href="/js/libs/simple-lightbox.min.css">
+        <script src="/js/libs/simple-lightbox.min.js"></script>
+
         <link rel="stylesheet" type="text/css" href="/styles.css">
+        <script src="/js/src/main.js"></script>
     </head>
 
     <body>
-        <header class="max-width max-width-1280 m-t-30">
-            <h1 class="text-center font-s-28 font-w-700">MINI COOPER S R53 2006 na prodej!</h1>
+        <header class="pos-rel w-100 h-100-vh fx fx-ver-cen fx-hor-cen m-b-45">
+            <h1 class="pos-abs center-wh text-center font-s-60 font-w-700 color-white line-h-1 p-30">ESKO NA PRODEJ!</h1>
+            <div class="scrolldown-btn">
+                <svg version="1.1" id="arrow_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="80px" viewbox="0 0 50 80" enable-background="new 0 0 50 80" xml:space="preserve">
+                    <path class="first-path" fill="#FFFFFF" d="M24.752,79.182c-0.397,0-0.752-0.154-1.06-0.463L2.207,57.234c-0.306-0.305-0.458-0.656-0.458-1.057 s0.152-0.752,0.458-1.059l2.305-2.305c0.309-0.309,0.663-0.461,1.06-0.461c0.398,0,0.752,0.152,1.061,0.461l18.119,18.119 l18.122-18.119c0.306-0.309,0.657-0.461,1.057-0.461c0.402,0,0.753,0.152,1.059,0.461l2.306,2.305 c0.308,0.307,0.461,0.658,0.461,1.059s-0.153,0.752-0.461,1.057L25.813,78.719C25.504,79.027,25.15,79.182,24.752,79.182z"></path>
+                    <path class="second-path" fill="#FFFFFF" d="M24.752,58.25c-0.397,0-0.752-0.154-1.06-0.463L2.207,36.303c-0.306-0.304-0.458-0.655-0.458-1.057 c0-0.4,0.152-0.752,0.458-1.058l2.305-2.305c0.309-0.308,0.663-0.461,1.06-0.461c0.398,0,0.752,0.153,1.061,0.461l18.119,18.12 l18.122-18.12c0.306-0.308,0.657-0.461,1.057-0.461c0.402,0,0.753,0.153,1.059,0.461l2.306,2.305 c0.308,0.306,0.461,0.657,0.461,1.058c0,0.401-0.153,0.753-0.461,1.057L25.813,57.787C25.504,58.096,25.15,58.25,24.752,58.25z"></path>
+                </svg>
+            </div>
         </header>
 
-        <main class="m-t-15">
+        <main>
 
             <!-- ÚVOD -->
-            <section class="max-width max-width-900">
-                <h2 class="font-s-18 font-w-700">CO A PROČ?</h2>
-                <p class="font-s-17 font-w-300">Ústředním hrdinou tohodle inzerátu je Mini Cooper S R53 s výkonem 125 kW, rokem výroby 2006, výbavovovou verzí Park Lane a nájezdem 120 000 km. Pochází z Francie (prodáno v Cannes), kde strávil většinu svýho života a v roce 2019 ho přivezli do ČR kde jsem se ho ujmul já. Přesnější rodokmen si můžete zjistit podle VINka WMWRE31080TD46109. Důvod týhle smutný prodejní události je to, že toho za rok moc nenajezdím a od listopadu mám ještě BMW E46 330i Touring, který není zase o tolik pomalejší, ale je praktičtější a pohodlnější a Mini tím pádem teď víc stojí (v kamarádově garáži) než jezdí, což je škoda.</p>
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">O CO JDE?</h2>
+                <p class="font-s-23 font-w-300">Hlavním hrdinou tohodle inzerátu bude Mini Cooper S R53 s výkonem 125 kW, rokem výroby 2006, výbavovovou verzí Park Lane a nájezdem 120 000 km. Pochází z Francie (prodáno v Cannes), kde strávil většinu svýho života a v roce 2019 ho přivezli do ČR, načež jsem se ho ujmul já.</p>
+
+                <p class="font-s-23 font-w-300">Přesnější rodokmen včetně výbavy si můžete zjistit podle VINka WMWRE31080TD46109. A pokud nechete utrácet, tak jsem byl tak hodnej a udělal jsem na svůj čedar výpis z <a href="https://www.carvertical.com/cz/prehled?id=3c98355c-67c9-4bc7-b7a1-68c8927c1146&vin=WMWRE31080TD46109" target="_blank">carVertical</a>. Bohužel, moc se tam nedozvíte. Pozitivum toho je, že jste ušetřili a negativum, že mi budete muset věřit.</p>
+
+                <p class="font-s-23 font-w-300">Důvodem týhle smutný prodejní události je, že toho za rok moc nenajezdím a od listopadu mám ještě BMW E46 330i Touring, který není zase o tolik pomalejší, ale je praktičtější a pohodlnější (asi jsem mindsetem dozrál do věku důchodce) a Mini tím pádem teď víc stojí než jezdí, což je škoda.</p>
             </section>
 
+            <!-- GALERIE INZERÁT -->
+            <section class="gallery-1 max-width max-width-1280 fx fx-hor-cen fx-gap-2 fx-wrap m-b-45">
+                <a class="max-width-415" href="/images/inzerat/mini-inzerat-1.jpg">
+                    <img class="max-width-415" src="/images/inzerat/mini-inzerat-1.jpg" alt="Mini Cooper S inzerát" loading="lazy" title="Fotky z původního inzerátu z roku 2019">
+                </a>
+                <a class="max-width-415" href="/images/inzerat/mini-inzerat-2.jpg">
+                    <img class="max-width-415" src="/images/inzerat/mini-inzerat-2.jpg" alt="Mini Cooper S inzerát" loading="lazy" title="Fotky z původního inzerátu z roku 2019">
+                </a>
+                <a class="max-width-415" href="/images/inzerat/mini-inzerat-3.jpg">
+                    <img class="max-width-415" src="/images/inzerat/mini-inzerat-3.jpg" alt="Mini Cooper S inzerát" loading="lazy" title="Fotky z původního inzerátu z roku 2019">
+                </a>
+                <a class="max-width-415" href="/images/inzerat/mini-inzerat-4.jpg">
+                    <img class="max-width-415" src="/images/inzerat/mini-inzerat-4.jpg" alt="Mini Cooper S inzerát" loading="lazy" title="Fotky z původního inzerátu z roku 2019">
+                </a>
+                <a class="max-width-415" href="/images/inzerat/mini-inzerat-5.jpg">
+                    <img class="max-width-415" src="/images/inzerat/mini-inzerat-5.jpg" alt="Mini Cooper S inzerát" loading="lazy" title="Fotky z původního inzerátu z roku 2019">
+                </a>
+                <a class="max-width-415" href="/images/inzerat/mini-inzerat-6.jpg">
+                    <img class="max-width-415" src="/images/inzerat/mini-inzerat-6.jpg" alt="Mini Cooper S inzerát" loading="lazy" title="Fotky z původního inzerátu z roku 2019">
+                </a>
+            </section>
+
+            <!-- STAV -->
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">V JAKÝM JE STAVU?</h2>
+                <p class="font-s-23 font-w-300">Dovolím si tvrdit, že v moc pěkným. Na kastli nenajdete žádnou rez a mechanicky je na tom taky velmi dobře, protože jsem masochista a svůj volnej čas rád trávím rozborkama a sborkama. Samozřejmě, nějaký šrámy se za ty roky najdou, ale není jich moc, a proto si o nich povíme až na konci. Ať je to napínavý!
+                </p>
+            </section>
+
+            <!-- VÝBAVA -->
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">CO TO MÁ ZA VÝBAVU?</h2>
+                <p class="font-s-23 font-w-300">Není to žádnej holobyt, frantík si to v salónu lehce naspecifikoval. Je to Park Lane edition, takže to má specifický lak Royal Grey Metallic, stříbrnou střechu a chromovaný serepetičky v interiéru. Sedačky jsou kožený a interiér je v béžový barvě. Dál to má automatickou klimatizaci, rádio s CD, multifunkční tříramenný volant, loketku, parkovací senzory a dešťový a světelný senzor.</p>
+
+                <p class="font-s-23 font-w-300">Co stojí za vypíchnutní, tak je takzvanej Chrono Pack uprostřed, kterej ukazuje teplotu vody a oleje a taky tlak oleje (ty hodnoty nejsou reálný, ale odvozený od jinejch parametrů). Ale ta nejlepší věc na tom je, že máte tachometr vedle otáčkoměru nad volantem a ne hloupě uprostřed. Jo a pod zadníma sedačkama je táhlo na otevření kufru! Šikovná věc, hlavně když odpojíte baterku a zavřete kufr. Zeptejte se mě, jak to vim.</p>
+
+                <p class="font-s-23 font-w-300">K autu jsou 2 sady 17" litých kol - na léto to jsou ultralehké Team Dynamics Pro Race 1.2 s pneu Goodyear Eagle F1 Asymmetric 5 a na zimu jsou originální 17" MINI Flame Spoke. Všechny pneu mají ještě dost vzorku na rozdávání. A když už jsme u těch sad, tak ještě zmíním 2 klíče - jeden je origo, druhý je dodělávaný od OKCZ (Ondra Kučera z Hradce)</p>
+            </section>
+
+            <!-- SERVIS -->
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">DOSTÁVALO TO SERVIS?</h2>
+                <p class="font-s-23 font-w-300">To si pište. Pokud by se to přepočetlo na naježděný kilometry, tak to mělo servis jak monopost Formule 1. Než tady vypisovat, co všechno jsem vyměnil a opravil, tak tady přiložím odkaz na moji rádoby servisní knížku v <a href="https://docs.google.com/spreadsheets/d/1jAmFMbEUMrWa8W3vCR1wF4s7Pv27_n1vIWr02l6ZjXs/edit?usp=sharing" target="_blank">google tabulce</a> a jako důkaz pár fotek s popiskama.</p>
+            </section>
+
+            <section class="gallery-2 max-width max-width-1280 fx fx-hor-cen fx-gap-2 fx-wrap m-b-45">
+                <a class="max-width-415" href="/images/opravy/abs-cidlo.jpg">
+                    <img class="max-width-415" src="/images/opravy/abs-cidlo.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Originální ABS čidlo z BMW...Ale koupeno přes Aliexpres. Někdy Číňani fakt překvapí.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/kompresor.jpg">
+                    <img class="max-width-415" src="/images/opravy/kompresor.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Jediná fotka ze servisu kompresoru, protože to byla docela drbačka. To lesklý pěkný vpravo je nová vodní pumpa.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/palivovy-filtr.jpg">
+                    <img class="max-width-415" src="/images/opravy/palivovy-filtr.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Palivový filtr už měl něco za sebou.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/refresh-subframu.jpg">
+                    <img class="max-width-415" src="/images/opravy/refresh-subframu.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Další drbačka. Výměna všech čepů a silentbloků (to fialový vzadu - polyurethanový od Powerflexu) + odrbaná rez na subframu a zalakováno.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/ventilove-viko-2.jpg">
+                    <img class="max-width-415" src="/images/opravy/ventilove-viko-2.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Výměna těsnění ventilového víka">
+                </a>
+                <a class="max-width-415" href="/images/opravy/ventilove-viko-1.jpg">
+                    <img class="max-width-415" src="/images/opravy/ventilove-viko-1.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Nikde nic zapečenýho, takže by se dalo říct, že olej se tam asi měnil pravidelně.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/rozvody.jpg">
+                    <img class="max-width-415" src="/images/opravy/rozvody.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Jeden strašák pro budoucího majitele vyřešen - rozvody už byly udělány, protože se v minulosti hryzly o vodící lištu.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/olejova-vana.jpg">
+                    <img class="max-width-415" src="/images/opravy/olejova-vana.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Tady jsou vidět ještě následky v olejové vaně. To jsem všechno vyndal, vyčistil sací sítko a dal nové těsnění olejové vany. Nyní už bez strašáků ve skříni.">
+                </a>
+            </section>
+
+
+            <!-- NAVÍC -->
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">CO JE TAM NAVÍC?</h2>
+                <p class="font-s-23 font-w-300">Jelikož ne vše na Mini je z výroby úplně oukej, rozhodl jsem se nějaký aspekty trochu vylepšit:</p>
+                <ul class="font-s-23 font-w-300">
+                    <li>Přední brzdy z novější generace R56, (které jsem kompletně zrepasoval), tudíž se z velikosti kotouče 276mm přešlo na 294mm.</li>
+                    <li>Hliníková expanzní nádoba místo plastové, která ráda praská.</li>
+                    <li>Přidány zesilující pláty z ocele pod horní uložení tlumiče (rádo se boulí, teď už by nemělo).</li>
+                    <li>Jsou tam o něco lepší vstřikovače BOSCH 0280156023. Oproti původním Siemens zvládnout dodat přibližně o 10% více paliva, takže když by se dala menší řemenice kompresoru, nemusí se člověk bát, že bude při plným plynu chudá směs.</li>
+                    <li>Powerflex zadní silentblok předních ramen.</li>
+                    <li>Šrouby ventilového víka z nerezu.</li>
+                    <li>Bluetooth modul pro origo rádio (má vstupy i pro USB a SD karty) s funkčním ovládáním radia přes tlačítka na volantu.</li>
+                </ul>
+            </section>
+
+            <!-- NEDUHY -->
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">TO ZNÍ AŽ PODEZŘELE DOBŘE!</h2>
+                <p class="font-s-23 font-w-300">Máte pravdu, je to podezřelý. Tak teda ještě nějaký ty neduhy.</p>
+
+                <p class="font-s-23 font-w-300">To, že je Mini původem z Francie, se dá poznat podle 2 vypálených míst v interiéru z toho, jak si Pyjér vášnivě vychutnával svoji odpolední cigaretku a podle pár venkovních šrámů z láskyplného parkování na ulici. Ale není to nic hrozného, na svůj věk je to furt docela leštěnka.</p>
+
+                <p class="font-s-23 font-w-300">Dále není naplněná klimatizace. Auto už jsem tak koupil, takže nedokážu říct jestli funguje nebo ne. Já jsem ji plnit nenechal, protože pro hodně oprav se sundává předek a dá se pak sundat i kondenzátor, který by se jinak pletl.</p>
+
+                <p class="font-s-23 font-w-300">Historicky asi mělo nějaký lehký ťukanec na řidičovu přední část, ale vliv na funkci to nemá, jezdí hezky rovně. Teď jsem toho prozradil víc, než carVertical a Cebie dohromady.</p>
+            </section>
+
+            <section class="max-width max-width-900 m-b-45">
+                <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">CO ZA TO CHCETE?</h2>
+                <p class="font-s-23 font-w-300"></p>
+
+            
+            </section>
         </main>
     </body>
 </html>
