--- a/mini-cooper-s-na-prodej.html
+++ b/mini-cooper-s-na-prodej.html
@@ -28,7 +28,7 @@
             <!-- ÚVOD -->
             <section class="max-width max-width-900 m-b-45">
                 <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">O CO JDE?</h2>
-                <p class="font-s-23 font-w-300">Hlavním hrdinou tohodle inzerátu bude Mini Cooper S R53 s výkonem 125 kW, rokem výroby 2006, výbavovovou verzí Park Lane a nájezdem 120 000 km. Pochází z Francie (prodáno v Cannes), kde strávil většinu svýho života a v roce 2019 ho přivezli do ČR, načež jsem se ho ujmul já.</p>
+                <p class="font-s-23 font-w-300">Hlavním hrdinou tohodle inzerátu bude Mini Cooper S R53 s výkonem 125 kW, rokem výroby 2006, výbavovovou verzí Park Lane a nájezdem 121 000 km. Pochází z Francie (prodáno v Cannes), kde strávil většinu svýho života. V roce 2019 ho přivezli do ČR, načež jsem se ho ujmul já.</p>
 
                 <p class="font-s-23 font-w-300">Přesnější rodokmen včetně výbavy si můžete zjistit podle VINka WMWRE31080TD46109. A pokud nechete utrácet, tak jsem byl tak hodnej a udělal jsem na svůj čedar výpis z <a href="https://www.carvertical.com/cz/prehled?id=3c98355c-67c9-4bc7-b7a1-68c8927c1146&vin=WMWRE31080TD46109" target="_blank">carVertical</a>. Bohužel, moc se tam nedozvíte. Pozitivum toho je, že jste ušetřili a negativum, že mi budete muset věřit.</p>
 
@@ -67,7 +67,7 @@
             <!-- VÝBAVA -->
             <section class="max-width max-width-900 m-b-45">
                 <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">CO TO MÁ ZA VÝBAVU?</h2>
-                <p class="font-s-23 font-w-300">Není to žádnej holobyt, frantík si to v salónu lehce naspecifikoval. Je to Park Lane edition, takže to má specifický lak Royal Grey Metallic, stříbrnou střechu a chromovaný serepetičky v interiéru. Sedačky jsou kožený a interiér je v béžový barvě. Dál to má automatickou klimatizaci, rádio s CD, multifunkční tříramenný volant, loketku, parkovací senzory a dešťový a světelný senzor.</p>
+                <p class="font-s-23 font-w-300">Není to žádnej holobyt, frantík si to v salónu lehce naspecifikoval. Je to Park Lane edition, takže to má specifický lak Royal Grey Metallic, stříbrnou střechu a chromovaný serepetičky v interiéru. Sedačky jsou kožený a interiér je v béžový barvě. Dál to má automatickou klimatizaci, rádio s CD, multifunkční tříramenný volant, tempomat, loketku, parkovací senzory a dešťový a světelný senzor.</p>
 
                 <p class="font-s-23 font-w-300">Co stojí za vypíchnutní, tak je takzvanej Chrono Pack uprostřed, kterej ukazuje teplotu vody a oleje a taky tlak oleje (ty hodnoty nejsou reálný, ale odvozený od jinejch parametrů). Ale ta nejlepší věc na tom je, že máte tachometr vedle otáčkoměru nad volantem a ne hloupě uprostřed. Jo a pod zadníma sedačkama je táhlo na otevření kufru! Šikovná věc, hlavně když odpojíte baterku a zavřete kufr. Zeptejte se mě, jak to vim.</p>
 
@@ -77,7 +77,7 @@
             <!-- SERVIS -->
             <section class="max-width max-width-900 m-b-45">
                 <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">DOSTÁVALO TO SERVIS?</h2>
-                <p class="font-s-23 font-w-300">To si pište. Pokud by se to přepočetlo na naježděný kilometry, tak to mělo servis jak monopost Formule 1. Než tady vypisovat, co všechno jsem vyměnil a opravil, tak tady přiložím odkaz na moji rádoby servisní knížku v <a href="https://docs.google.com/spreadsheets/d/1jAmFMbEUMrWa8W3vCR1wF4s7Pv27_n1vIWr02l6ZjXs/edit?usp=sharing" target="_blank">google tabulce</a> a jako důkaz pár fotek s popiskama.</p>
+                <p class="font-s-23 font-w-300">To si pište. Pokud by se to přepočetlo na naježděný kilometry, tak to mělo servis jak monopost Formule 1. Než tady vypisovat, co všechno jsem vyměnil a opravil, tak tady přiložím odkaz na moji rádoby servisní knížku v <a href="https://docs.google.com/spreadsheets/d/1jAmFMbEUMrWa8W3vCR1wF4s7Pv27_n1vIWr02l6ZjXs/edit?usp=sharing" target="_blank">google tabulce</a> a jako důkaz pár fotek s popisky.</p>
             </section>
 
             <section class="gallery-2 max-width max-width-1280 fx fx-hor-cen fx-gap-2 fx-wrap m-b-45">
@@ -97,10 +97,13 @@
                     <img class="max-width-415" src="/images/opravy/ventilove-viko-2.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Výměna těsnění ventilového víka">
                 </a>
                 <a class="max-width-415" href="/images/opravy/ventilove-viko-1.jpg">
-                    <img class="max-width-415" src="/images/opravy/ventilove-viko-1.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Nikde nic zapečenýho, takže by se dalo říct, že olej se tam asi měnil pravidelně.">
+                    <img class="max-width-415" src="/images/opravy/ventilove-viko-1.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Nikde nic zapečenýho, takže by se dalo říct, že olej se tam měnil pravidelně.">
+                </a>
+                <a class="max-width-415" href="/images/opravy/tlumice.jpg">
+                    <img class="max-width-415" src="/images/opravy/tlumice.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Výměna předních tlumičů, ten černý troujúhelník s dírou uprostřed je zesilovací plát.">
                 </a>
                 <a class="max-width-415" href="/images/opravy/rozvody.jpg">
-                    <img class="max-width-415" src="/images/opravy/rozvody.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Jeden strašák pro budoucího majitele vyřešen - rozvody už byly udělány, protože se v minulosti hryzly o vodící lištu.">
+                    <img class="max-width-415" src="/images/opravy/rozvody.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Jeden strašák pro budoucího majitele vyřešen - rozvody už byly udělány, protože se ve francouzské minulosti pravděpodobně hryzly o vodící lištu.">
                 </a>
                 <a class="max-width-415" href="/images/opravy/olejova-vana.jpg">
                     <img class="max-width-415" src="/images/opravy/olejova-vana.jpg" alt="Mini Cooper S opravy" loading="lazy" title="Tady jsou vidět ještě následky v olejové vaně. To jsem všechno vyndal, vyčistil sací sítko a dal nové těsnění olejové vany. Nyní už bez strašáků ve skříni.">
@@ -137,9 +140,15 @@
 
             <section class="max-width max-width-900 m-b-45">
                 <h2 class="font-s-45 font-w-700 m-b-30 line-h-1">CO ZA TO CHCETE?</h2>
-                <p class="font-s-23 font-w-300"></p>
+                <p class="font-s-23 font-w-300">Obě vaše ledviny, prvorozenýho syna nebo...</p>
 
-            
+                <div class="fx fx-hor-cen">
+                    <h3 class="m-t-30 m-b-45 font-s-45 font-w-700 text-center">160 000,- Kč</h3>
+                </div>
+
+                <p class="font-s-23 font-w-300">Ještě pár drobností pro kupce. V autě bude při koupi většina povinný výbavy (lékárnička, trojúhleník, kompresůrek s lepidlem na pneu, tažný lano) a STK je do 10/23. K vidění je v Hradci Králové a auto neodjede bez přepisu, takže si spolu dáme rande na úřadě. Pro klasický rybáře, který nahazujou extrémně podstřelený částky - děkuju, ale ne. Takže pokud nejste rybář a máte zájem, napište mi na <a href="mailto:tomaskahanek@gmail.com?subject=Rád bych koupil Vašeho Mini Coopera">tomaskahanek@gmail.com</a></p>
+
+                <p class="font-s-45 font-w-300 m-t-45 m-b-45 text-center">C'est la fin!</p>
             </section>
         </main>
     </body>
